--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
     "bootstrap": "^5.2.3",
-    "react-bootstrap": "^2.7.2"
+    "bootstrap-icons": "^1.10.4",
+    "react": "^18.2.0",
+    "react-bootstrap": "^2.7.2",
+    "react-css-theme-switcher": "^0.3.0",
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
