--- a/package.json
+++ b/package.json
@@ -12,12 +12,15 @@
     "bootstrap": "^5.2.3",
     "bootstrap-icons": "^1.10.4",
     "react": "^18.2.0",
+    "react-animations": "^1.0.0",
     "react-bootstrap": "^2.7.2",
     "react-dom": "^18.2.0",
+    "react-social-icons": "^5.15.0",
     "styled-components": "^5.3.9"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
+    "@types/react-animations": "^1.0.0",
     "@types/react-dom": "^18.0.11",
     "@types/styled-components": "^5.1.26",
     "@vitejs/plugin-react": "^3.1.0",
