--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@fullpage/react-fullpage": "^0.1.38",
     "bootstrap": "^5.2.3",
     "bootstrap-icons": "^1.10.4",
     "react": "^18.2.0",
     "react-animations": "^1.0.0",
     "react-bootstrap": "^2.7.2",
     "react-dom": "^18.2.0",
+    "react-fullpage": "^0.1.19",
     "react-social-icons": "^5.15.0",
     "styled-components": "^5.3.9"
   },
