--- a/package.json
+++ b/package.json
@@ -18,12 +18,14 @@
     "react-dom": "^18.2.0",
     "react-fullpage": "^0.1.19",
     "react-social-icons": "^5.15.0",
+    "react-typing-effect": "^2.0.5",
     "styled-components": "^5.3.9"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
     "@types/react-animations": "^1.0.0",
     "@types/react-dom": "^18.0.11",
+    "@types/react-typing-effect": "^2.0.3",
     "@types/styled-components": "^5.1.26",
     "@vitejs/plugin-react": "^3.1.0",
     "typescript": "^4.9.3",
