--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-fullpage": "^0.1.19",
     "react-social-icons": "^5.15.0",
     "react-typing-effect": "^2.0.5",
+    "react-useanimations": "^2.10.0",
     "styled-components": "^5.3.9"
   },
   "devDependencies": {
