--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@fullpage/react-fullpage": "^0.1.38",
+    "axios": "^1.3.6",
     "bootstrap": "^5.2.3",
     "bootstrap-icons": "^1.10.4",
     "react": "^18.2.0",
